# QtRosSerialScannerApplication

./: CMakeLists.txt  mainpage.dox  package.xml
include/SerialScannerApplication/: main_window.hpp  qnode.hpp
src/: main.cpp  main_window.cpp  qnode.cpp
ui/: main_window.ui
